<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.ahli</groupId>
	<artifactId>galaxy-lib</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- version definitions -->
		<byte-buddy.version>1.10.16</byte-buddy.version>
		<jakarta-xml-bind.version>2.3.3</jakarta-xml-bind.version><!-- 2.3.3 -> 3.0.0-RC3 -->
		<jakarta-transaction.version>1.3.3</jakarta-transaction.version><!-- 1.3.3 -> 2.0.0-RC1 -->
		<jakarta-persistence.version>2.2.3</jakarta-persistence.version><!-- 2.2.3 -> 3.0.0-RC2 -->
		<jakarta-annotation.version>2.0.0-RC1</jakarta-annotation.version><!-- 1.3.5 -> 2.0.0-RC1 -->
		<jakarta-activation.version>2.0.0-RC3</jakarta-activation.version><!-- 1.2.2 -> 2.0.0-RC3 -->
		<glassfish-jaxb.version>3.0.0-M4</glassfish-jaxb.version>
		<hibernate.version>5.4.21.Final</hibernate.version><!-- 5.4.21.Final -> 6.0.0.Alpha4 -->
		<hibernate-validator.version>6.1.6.Final</hibernate-validator.version><!-- 6.1.5.Final -> 7.0.0.Alpha6 -->
		<h2.version>1.4.200</h2.version>
		<mockito.version>3.6.0</mockito.version>
		<mockito-junit-jupiter.version>3.6.0</mockito-junit-jupiter.version>
		<javafx.version>16-ea+3</javafx.version>
		<kryo.version>5.0.0</kryo.version>
		<pecoff4j.version>0.0.2.1</pecoff4j.version>
		<asm.version>9.0</asm.version>
		<!--<junit-platformsurefireprovider.version>1.3.2</junit-platformsurefireprovider.version>-->
		<commons-lang3.version>3.11</commons-lang3.version>
		<junit-jupiter.version>5.7.0</junit-jupiter.version>
		<log4j2.version>2.13.3</log4j2.version>
		<lmax-disruptor.version>3.4.2</lmax-disruptor.version>
		<fontawesomefx-fontawesome.version>4.7.0-9.1.2</fontawesomefx-fontawesome.version>
		<fontawesomefx-commons.version>9.1.2</fontawesomefx-commons.version>
		<slf4j.version>1.7.30</slf4j.version>
		<eclipse-collection.version>10.4.0</eclipse-collection.version>
		<commons-io.version>2.8.0</commons-io.version>
		<hikaricp.version>3.4.5</hikaricp.version>
		<jboss-logging.version>3.4.1.Final</jboss-logging.version>
		<aspectj.version>1.9.6</aspectj.version> <!-- 1.9.7.M1 not compatible, InvalidModuleDescriptorException: Dumper.class -->

		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-configuration2.version>2.7</commons-configuration2.version>
		<commons-text.version>1.9</commons-text.version>
		<vtd-xml.version>2.13.4</vtd-xml.version>
	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>14</source>
					<target>14</target>
					<release>14</release>
					<excludes>
						<!-- excludes files from being put into same path as classes -->
						<exclude>**/*.txt</exclude>
					</excludes>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
				</configuration>
			</plugin>

			<!-- Force requirement of Maven version 3.0+ -->
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-enforcer-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>[3.1.0,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- goal to execute to check for plugins and dependency updates:
		 		versions:display-plugin-updates versions:display-dependency-updates
			 -->
			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.8.1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<!--<argLine>&#45;&#45;enable-preview</argLine>-->
				</configuration>
				<dependencies>
					<dependency>
						<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>${asm.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-site-plugin -->
				<artifactId>maven-site-plugin</artifactId>
				<version>3.9.1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>6.0.2</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- file IO stuff -->
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<!-- to get stack trace as String -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>

		<!-- log4j2 -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<!-- used in async logging -->
		<!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>${lmax-disruptor.version}</version>
		</dependency>

		<!-- high performance xml parser -->
		<!-- https://mvnrepository.com/artifact/com.ximpleware/vtd-xml -->
		<dependency>
			<groupId>com.ximpleware</groupId>
			<artifactId>vtd-xml</artifactId>
			<version>${vtd-xml.version}</version>
		</dependency>

		<!-- read ini files -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>${commons-configuration2.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
		</dependency>
		<!-- update dependency within configuration2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>

		<!-- Mockito to assist unit tests with fake-DB info -->
		<dependency>
			<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito-junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections-api</artifactId>
			<version>${eclipse-collection.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections</artifactId>
			<version>${eclipse-collection.version}</version>
		</dependency>

	</dependencies>
</project>